--- a/src/main/conf/nas/grammar/5gs/NAS-5GS-152/dictionnary5GSSesionManagementMessages.yaml
+++ b/src/main/conf/nas/grammar/5gs/NAS-5GS-152/dictionnary5GSSesionManagementMessages.yaml
@@ -4,7 +4,10 @@ messages :
       - type: "Spare half octet"
         length: 4
       - type: "Payload container type"
-        length: -1
+        length: 4
+      - type: "Payload container"
+        nBitLength: 16
+
     optional:
       12:
         type: "PDU session identity 2"
@@ -31,7 +34,10 @@ messages :
         - type: "Spare half octet"
           length: 4
         - type: "Payload container type"
-          length: -1
+          length: 4
+        - type: "Payload container"
+          nBitLength: 16
+
     optional:
         12:
           type: "PDU session identity 2"
