--- a/src/main/conf/ngap.properties
+++ b/src/main/conf/ngap.properties
@@ -161,5 +161,5 @@ TRACE_LEVEL= WARNING
 NB_ITERATION=10000
 
 #####################################################
-#version of protocol NAS-5GS to use for example for version 15.2.0 => 152
+# Version of protocol NAS-5GS to use, for example for version 15.2.0 => 152
 nas.VERSION= 152
