--- a/src/main/conf/nas/grammar/5gs/NAS-5GS-152/dictionnary5GSSesionManagementInformationElements.yaml
+++ b/src/main/conf/nas/grammar/5gs/NAS-5GS-152/dictionnary5GSSesionManagementInformationElements.yaml
@@ -138,8 +138,12 @@ elements:
 
   - name: "SSC mode"
     pdu:
+      - "@type": "SPARE"
+        name: "Spare"
+        length: 1
+        value: 0
       - name: "SSC mode value"
-        length: 4
+        length: 3
         namedValue:
           1: "SSC mode 1"
           2: "SSC mode 2"
