--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <dom4j.version>2.1.3</dom4j.version>
         <jaxen.version>2.0.0</jaxen.version>
         <snakeyaml.version>2.0</snakeyaml.version>
+        <commons-text.version>1.10.0</commons-text.version>
         <httpcore5.version>5.0-beta9</httpcore5.version>
         <opencsv.version>2.3</opencsv.version>
         <jain-sip-api.version>1.2.1.4</jain-sip-api.version>
@@ -384,6 +385,11 @@
             <artifactId>jaxen</artifactId>
             <version>${jaxen.version}</version>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>${commons-text.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents.core5</groupId>
